--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,23 @@
         </div>
       </div>
     </header>
+    <section class="search" style="background-image: url(../img/search_box.jpg);">
+      <div class="container">
+        <div class="search__inner">
+          <div class="search__inner-title">Welcome To Foxtar Market Place!</div>
+          <div class="saerch__inner-text">Premium WordPress Themes, Web Templates and Many More ...</div>
+          <div class="search__inner-form">
+            <form>
+              <input type="text" placeholder="Search Your Keywords . . ."required>
+              <button type="submit">
+                <img src="img/icons/search.png" alt="">
+              </button>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
