--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/libs.min/css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -13,22 +16,24 @@
       <div class="header__top">
         <div class="container">
           <div class="header__top-inner">
-          <div class="header__logo">
-            <a href="#"><img src="img/logo.png" alt="photo" /></a>
-          </div>
-          <div class="header__text">
-            <a href="#"><span>Need help?</span></a>
-            Talk to an expert:
-            <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
-          </div>
-          <div class="header__box">
-            <a class="basket" href="#"></a>
-            <a class="header__btn header__btn-login" href="#">Login</a>
-            <a class="header__btn header__btn-register" href="#">Register</a>
+            <div class="header__logo">
+              <a href="#"><img src="img/logo.png" alt="photo" /></a>
+            </div>
+            <div class="header__text">
+              <a href="#"><span>Need help?</span></a>
+              Talk to an expert:
+              <a class="header__phone" href="tel:61383766284"
+                >+61 3 8376 6284</a
+              >
+            </div>
+            <div class="header__box">
+              <a class="basket" href="#"></a>
+              <a class="header__btn header__btn-login" href="#">Login</a>
+              <a class="header__btn header__btn-register" href="#">Register</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
       <div class="header__menu">
         <div class="container">
@@ -44,33 +49,337 @@
               <li><a href="#">Pages</a></li>
               <li><a href="#">Contact</a></li>
               <li><a href="#">Help</a></li>
-                                                                                                                   
-
             </ul>
           </nav>
         </div>
       </div>
     </header>
-    <section class="search" style="background-image: url(../img/search_box.jpg);">
+    <section
+      class="search"
+      style="background-image: url(../img/search_box.jpg);"
+    >
       <div class="container">
         <div class="search__inner">
-          <div class="search__inner-title">Welcome To Foxtar Market Place!</div>
-          <div class="saerch__inner-text">Premium WordPress Themes, Web Templates and Many More ...</div>
+          <div class="search__inner-title">
+            Welcome To Moderno Market Place!
+          </div>
+          <div class="saerch__inner-text">
+            Premium WordPress Themes, Web Templates and Many More ...
+          </div>
           <div class="search__inner-form">
             <form>
-              <input type="text" placeholder="Search Your Keywords . . ."required>
-              <button type="submit">
-                <img src="img/icons/search.png" alt="">
+              <input
+                type="text"
+                placeholder="Search Your Keywords . . ."
+                required
+              />
+              <button class="search_btn" type="submit">
+                <img src="img/icons/search.png" alt="" />
               </button>
             </form>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="products">
+      <div class="container-fluid">
+        <div class="products__title title">
+          Let’s Check Out Our Newest Release Prodcuts
+        </div>
+        <div class="products__inner">
+          <div class="products__inner-btn">
+            <button type="button" data-filter="all">All</button>
+            <button type="button" data-filter=".category-wordpress">
+              WordPress
+            </button>
+            <button type="button" data-filter=".category-joomla">Joomla</button>
+            <button type="button" data-filter=".category-plugins">
+              Plugins
+            </button>
+            <button type="button" data-filter=".category-component">
+              Component
+            </button>
+            <button type="button" data-filter=".category-psd">PSD</button>
+          </div>
 
+          <div class="products__inner-box">
+            <div
+              class="product__item mix category-plugins category-new"
+              data-order="1"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-1.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#"
+                    >Responsive Mobile APP</a
+                  >
+                  <a class="product__item-category" href="#">Site Template</a>
+                </div>
+                <div class="product__item-price">
+                  $19
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-1.jpg);"
+                  ></div>
+                  <span>Radiustheme</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-wordpress category-new"
+              data-order="2"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-2.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">The Post Grid Pro</a>
+                  <a class="product__item-category" href="#"
+                    >WordPress Plugin</a
+                  >
+                </div>
+                <div class="product__item-price">
+                  $15
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-2.jpg);"
+                  ></div>
+                  <span>PsdBosS</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-wordpress category-popular"
+              data-order="3"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-3.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">Food Menu</a>
+                  <a class="product__item-category" href="#"
+                    >WordPress Plugin</a
+                  >
+                </div>
+                <div class="product__item-price">
+                  $20
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-3.jpg);"
+                  ></div>
+                  <span>Manilip</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-psd category-popular"
+              data-order="4"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-4.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">Imac Mockup</a>
+                  <a class="product__item-category" href="#">Psd Template</a>
+                </div>
+                <div class="product__item-price">
+                  $12
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-4.jpg);"
+                  ></div>
+                  <span>Lolypop</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div class="product__item mix category-joomla category-popular">
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-5.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">Gymedge</a>
+                  <a class="product__item-category" href="#">Joomla Template</a>
+                </div>
+                <div class="product__item-price">
+                  $45
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-5.jpg);"
+                  ></div>
+                  <span>Micrsof</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-wordpress category-popular"
+              data-order="1"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-6.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">The Post Grid Pro</a>
+                  <a class="product__item-category" href="#"
+                    >WordPress Plugin</a
+                  >
+                </div>
+                <div class="product__item-price">
+                  $15
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-6.jpg);"
+                  ></div>
+                  <span>Raklouse</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-component category-new"
+              data-order="2"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-7.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">Doll Face</a>
+                  <a class="product__item-category" href="#">Illsatration</a>
+                </div>
+                <div class="product__item-price">
+                  $10
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-7.jpg);"
+                  ></div>
+                  <span>Mikc Art</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <div
+              class="product__item mix category-psd category-new"
+              data-order="3"
+            >
+              <a
+                class="product__item-img"
+                href="#"
+                style="background-image: url(img/content/product-8.jpg);"
+              ></a>
+              <div class="product__item-content">
+                <div class="product__item-name">
+                  <a class="product__item-title" href="#">Designer Mockup</a>
+                  <a class="product__item-category" href="#">PsdTemplate</a>
+                </div>
+                <div class="product__item-price">
+                  $10
+                </div>
+              </div>
+              <div class="product__item-info">
+                <a class="product__item-author" href="#">
+                  <div
+                    class="avatar"
+                    style="background-image: url(img/content/author-8.jpg);"
+                  ></div>
+                  <span>ThemeLol</span>
+                </a>
+                <div class="product__item-star">
+                  (05)
+                </div>
+              </div>
+            </div>
+            <!-- ///// -->
+          </div>
+        </div>
+        <div class="products__bottom-btn">
+          <button
+            type="button"
+            data-filter=".category-new"
+            class="product__btn"
+          >
+            All New Items
+          </button>
+          <button
+            type="button"
+            data-filter=".category-popular"
+            class="product__btn"
+          >
+            Popular Items
+          </button>
         </div>
       </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
