--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,8 @@
                   <span>Radiustheme</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -165,7 +166,8 @@
                   <span>PsdBosS</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -198,7 +200,8 @@
                   <span>Manilip</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -229,7 +232,8 @@
                   <span>Lolypop</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -257,7 +261,8 @@
                   <span>Micrsof</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -290,7 +295,8 @@
                   <span>Raklouse</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -321,7 +327,8 @@
                   <span>Mikc Art</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -352,7 +359,8 @@
                   <span>ThemeLol</span>
                 </a>
                 <div class="product__item-star">
-                  (05)
+                  <div class="rate-star"></div>
+                  <span>(05)</span>
                 </div>
               </div>
             </div>
@@ -377,7 +385,412 @@
         </div>
       </div>
     </section>
-
+    <section class="product__slider">
+      <div class="container-fluid">
+        <div class="product__slider-title title">
+          This Week Trending Products
+        </div>
+        <div class="product-slider__inner">
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-12.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">UI Design</a>
+                <a class="product__item-category" href="#">Psd Template</a>
+              </div>
+              <div class="product__item-price">$12</div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(img/content/author-6.jpg);"></div>
+                <span>Blikimore</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-11.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Logo Showcae</a>
+                <a class="product__item-category" href="#">Joomla Cmponent</a>
+              </div>
+              <div class="product__item-price">
+                $20
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-7.jpg);"
+                ></div>
+                <span>Rozalthiric</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-10.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">The Post Grid Pro</a>
+                <a class="product__item-category" href="#">WordPress Plugin</a>
+              </div>
+              <div class="product__item-price">
+                $15
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-3.jpg);"
+                ></div>
+                <span>Venom Fate</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Template</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $20
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-5.jpg);"
+                ></div>
+                <span>Zemmiphobia</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-5.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-7.jpg);"
+                ></div>
+                <span>Musophobia</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-1.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">UI Design</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-1.jpg);"
+                ></div>
+                <span>Geliophobia</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-2.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Logo Showcae</a>
+                <a class="product__item-category" href="#">Illsatration</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-2.jpg);"
+                ></div>
+                <span>Ecophobia</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+            <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-3.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Joomla Cmponent</a>
+                <a class="product__item-category" href="#">PsdTemplate</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-3.jpg);"
+                ></div>
+                <span>Dravenfact</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+            <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-4.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Joomla Cmponent</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-4.jpg);"
+                ></div>
+                <span>Bookman</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-5.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-5.jpg);"
+                ></div>
+                <span>Spuffyffet</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-6.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">UI Design</a>
+                <a class="product__item-category" href="#">WordPress Plugin</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-6.jpg);"
+                ></div>
+                <span>Blikimore</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-10.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Joomla Cmponent</a>
+                <a class="product__item-category" href="#">WordPress Plugin</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-7.jpg);"
+                ></div>
+                <span>Ortspoon</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-8.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-8.jpg);"
+                ></div>
+                <span>Reakefit</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Joomla Cmponent</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-5.jpg);"
+                ></div>
+                <span>Oranolio</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-6.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-3.jpg);"
+                ></div>
+                <span>Radiustheme</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+          <div class="product__item">
+            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-3.jpg);"
+                ></div>
+                <span>Blikimore</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div>
+         
+      
+        </div>
+      </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
