--- a/app/index.html
+++ b/app/index.html
@@ -364,7 +364,6 @@
                 </div>
               </div>
             </div>
-            <!-- ///// -->
           </div>
         </div>
         <div class="products__bottom-btn">
@@ -392,7 +391,11 @@
         </div>
         <div class="product-slider__inner">
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-12.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-12.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">UI Design</a>
@@ -402,7 +405,10 @@
             </div>
             <div class="product__item-info">
               <a class="product__item-author" href="#">
-                <div class="avatar" style="background-image: url(img/content/author-6.jpg);"></div>
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-6.jpg);"
+                ></div>
                 <span>Blikimore</span>
               </a>
               <div class="product__item-star">
@@ -412,7 +418,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-11.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-11.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Logo Showcae</a>
@@ -437,7 +447,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-10.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-10.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">The Post Grid Pro</a>
@@ -462,7 +476,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-9.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Responsive Template</a>
@@ -487,10 +505,16 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-5.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-5.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
-                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-title" href="#"
+                  >Responsive Mobile APP</a
+                >
                 <a class="product__item-category" href="#">Site Template</a>
               </div>
               <div class="product__item-price">
@@ -512,7 +536,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-1.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-1.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">UI Design</a>
@@ -537,7 +565,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-2.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-2.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Logo Showcae</a>
@@ -561,8 +593,12 @@
               </div>
             </div>
           </div>
-            <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-3.jpg);"></a>
+          <div class="product__item">
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-3.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Joomla Cmponent</a>
@@ -586,8 +622,12 @@
               </div>
             </div>
           </div>
-            <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-4.jpg);"></a>
+          <div class="product__item">
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-4.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Joomla Cmponent</a>
@@ -612,10 +652,16 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-5.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-5.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
-                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-title" href="#"
+                  >Responsive Mobile APP</a
+                >
                 <a class="product__item-category" href="#">Site Template</a>
               </div>
               <div class="product__item-price">
@@ -637,7 +683,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-6.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-6.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">UI Design</a>
@@ -662,7 +712,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-10.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-10.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Joomla Cmponent</a>
@@ -687,10 +741,16 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-8.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-8.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
-                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-title" href="#"
+                  >Responsive Mobile APP</a
+                >
                 <a class="product__item-category" href="#">Site Template</a>
               </div>
               <div class="product__item-price">
@@ -712,7 +772,11 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-9.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
                 <a class="product__item-title" href="#">Joomla Cmponent</a>
@@ -737,10 +801,16 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-6.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-6.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
-                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-title" href="#"
+                  >Responsive Mobile APP</a
+                >
                 <a class="product__item-category" href="#">Site Template</a>
               </div>
               <div class="product__item-price">
@@ -762,10 +832,16 @@
             </div>
           </div>
           <div class="product__item">
-            <a class="product__item-img" href="#"style="background-image: url(img/content/product-9.jpg);"></a>
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-9.jpg);"
+            ></a>
             <div class="product__item-content">
               <div class="product__item-name">
-                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+                <a class="product__item-title" href="#"
+                  >Responsive Mobile APP</a
+                >
                 <a class="product__item-category" href="#">Site Template</a>
               </div>
               <div class="product__item-price">
@@ -786,8 +862,67 @@
               </div>
             </div>
           </div>
-         
-      
+        </div>
+      </div>
+    </section>
+    <section class="advanteges">
+      <div class="container">
+        <div class="advanteges__title title">
+          Why You Choose Moderno Market Place?
+        </div>
+        <div class="advanteges__inner">
+          <div class="advanteges__item">
+            <div class="advanteges__icon-images">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="-80 -80 700 650" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+             <path d="M394.667,214.421v-75.755C394.667,62.208,332.459,0,256,0S117.333,62.208,117.333,138.667v75.755
+                 c-24.32,4.949-42.667,26.496-42.667,52.245v192C74.667,488.064,98.581,512,128,512h256c29.419,0,53.333-23.936,53.333-53.333v-192
+                 C437.333,240.917,418.987,219.371,394.667,214.421z M279.659,378.24l8.235,57.579c0.448,3.072-0.469,6.165-2.496,8.491
+                 c-2.027,2.325-4.971,3.691-8.064,3.691h-42.667c-3.093,0-6.037-1.344-8.064-3.669s-2.944-5.44-2.496-8.491l8.235-57.579
+                 c-17.835-8.917-29.675-27.328-29.675-47.595c0-29.397,23.915-53.333,53.333-53.333s53.333,23.936,53.333,53.333
+                 C309.333,350.933,297.493,369.344,279.659,378.24z M330.667,213.333H181.333v-74.667C181.333,97.493,214.827,64,256,64
+                 s74.667,33.493,74.667,74.667V213.333z"/></div>
+            <div class="advanteges__caption">Easily Buy & Sell</div>
+            <div class="advanteges__text">
+              Dorem Ipsum is simply dummy text of the pring and typesetting
+              industry. Lorem Ipsum has been the industry's standaum.
+            </div>
+          </div>
+          <div class="advanteges__item">
+            <div class="advanteges__icon-images">
+              <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="-80 -80 700 650" style="enable-background:new 0 0 512 512;" xml:space="preserve">           
+               <path d="M481.616,149.553l-25.65-70.475c-8.486-23.316-34.36-35.383-57.675-26.894l-47.161,17.166
+                 c0.076-0.461,0.155-0.922,0.221-1.387c3.093-21.747-6.014-42.742-24.356-56.16c-17.342-12.687-39.535-15.321-59.363-7.049
+                 c-19.83,8.273-33.57,25.897-36.744,47.072l-6.738,43.457l-34.842-30.799c-16.099-14.231-37.953-18.903-58.46-12.491
+                 c-45.151,14.11-57.506,71.958-22.495,103.38c0.629,0.564,1.271,1.108,1.919,1.644l-50.262,18.294
+                 c-23.367,8.505-35.401,34.302-26.893,57.674l25.651,70.475l31.942-11.554v175.096c0,24.812,19.986,44.999,44.799,44.999
+                 c4.39,0,290.694,0,299.992,0c24.812,0,44.999-20.186,44.999-44.999V240.008c-9.638,0-247.401,0-247.401,0L481.616,149.553z
+                  M408.551,80.374c7.77-2.828,16.397,1.193,19.224,8.965l15.392,42.285l-140.95,51.302l-20.52-56.38L408.551,80.374z
+                  M260.545,56.346c1.613-10.774,8.581-19.71,18.635-23.905c9.962-4.156,21.226-2.919,30.102,3.574
+                 c20.154,14.744,15.322,42.987-7.663,51.356c-3.853,1.402-28.97,10.545-30.184,10.986l-18.445,6.713L260.545,56.346z
+                  M253.505,136.806l20.52,56.379c-9.859,3.589-18.331,6.672-28.19,10.261l-20.52-56.38L253.505,136.806z M139.795,80.624
+                 c10.269-3.208,21.376-0.974,29.644,6.334l38.88,34.37c-11.28,4.106-37.952,13.814-48.77,17.75
+                 c-10.89,3.961-22.537,1.706-31.16-6.034C110.347,116.852,117.224,87.678,139.795,80.624z M76.696,265.009l-15.391-42.285
+                 c-2.836-7.787,1.173-16.39,8.965-19.227l126.855-46.171l20.52,56.379L76.696,265.009z M330.502,270.007h120.197v196.995
+                 c0,8.271-6.929,15-15.2,15H330.502V270.007z M270.504,270.007h30.199v211.994h-30.199V270.007z M240.704,270.007v211.994H135.507
+                 c-8.271,0-15-6.729-15-15V280.987l30.166-10.98H240.704z"/></div>
+            <div class="advanteges__caption">Quality Products</div>
+            <div class="advanteges__text">
+              Dorem Ipsum is simply dummy text of the pring and typesetting
+              industry. Lorem Ipsum has been the industry's standaum.
+            </div>
+          </div>
+          <div class="advanteges__item">
+            <div class="advanteges__icon-images">
+              <svg viewBox="-80 -130 700 650" xmlns="http://www.w3.org/2000/svg">
+                <path d="m256 455.515625c-7.289062 0-14.316406-2.640625-19.792969-7.4375-20.683593-18.085937-40.625-35.082031-58.21875-50.074219l-.089843-.078125c-51.582032-43.957031-96.125-81.917969-127.117188-119.3125-34.644531-41.804687-50.78125-81.441406-50.78125-124.742187 0-42.070313 14.425781-80.882813 40.617188-109.292969 26.503906-28.746094 62.871093-44.578125 102.414062-44.578125 29.554688 0 56.621094 9.34375 80.445312 27.769531 12.023438 9.300781 22.921876 20.683594 32.523438 33.960938 9.605469-13.277344 20.5-24.660157 32.527344-33.960938 23.824218-18.425781 50.890625-27.769531 80.445312-27.769531 39.539063 0 75.910156 15.832031 102.414063 44.578125 26.191406 28.410156 40.613281 67.222656 40.613281 109.292969 0 43.300781-16.132812 82.9375-50.777344 124.738281-30.992187 37.398437-75.53125 75.355469-127.105468 119.308594-17.625 15.015625-37.597657 32.039062-58.328126 50.167969-5.472656 4.789062-12.503906 7.429687-19.789062 7.429687zm-112.96875-425.523437c-31.066406 0-59.605469 12.398437-80.367188 34.914062-21.070312 22.855469-32.675781 54.449219-32.675781 88.964844 0 36.417968 13.535157 68.988281 43.882813 105.605468 29.332031 35.394532 72.960937 72.574219 123.476562 115.625l.09375.078126c17.660156 15.050781 37.679688 32.113281 58.515625 50.332031 20.960938-18.253907 41.011719-35.34375 58.707031-50.417969 50.511719-43.050781 94.136719-80.222656 123.46875-115.617188 30.34375-36.617187 43.878907-69.1875 43.878907-105.605468 0-34.515625-11.605469-66.109375-32.675781-88.964844-20.757813-22.515625-49.300782-34.914062-80.363282-34.914062-22.757812 0-43.652344 7.234374-62.101562 21.5-16.441406 12.71875-27.894532 28.796874-34.609375 40.046874-3.453125 5.785157-9.53125 9.238282-16.261719 9.238282s-12.808594-3.453125-16.261719-9.238282c-6.710937-11.25-18.164062-27.328124-34.609375-40.046874-18.449218-14.265626-39.34375-21.5-62.097656-21.5zm0 0"/></svg></div>              
+            <div class="advanteges__caption">100% Secure Payment</div>
+            <div class="advanteges__text">
+              Dorem Ipsum is simply dummy text of the pring and typesetting
+              industry. Lorem Ipsum has been the industry's standaum.
+            </div>
+          </div>
         </div>
       </div>
     </section>
