added tutorial section

--- a/app/index.html
+++ b/app/index.html
@@ -934,6 +934,31 @@
         <a href="#" class="author__btn">Become A Author</a>    
         </div>
     </section>
+    <section class="tutorial">
+      <div class="container">
+        <div class="tutorial__title title">Free Monthly Tutorials To Help You With Your Project </div>
+        <div class="tutorial__inner">
+          <div class="tutorial__item">
+          <a href="#">
+          <div class="tutorial__item-img" style="background-image: url(../img/content/tutorial-1.jpg);"></div>
+          <div class="tutorial__item-text">Web Design Tutorials</div>
+        </a>
+        </div>
+        <div class="tutorial__item">
+          <a href="#">
+          <div class="tutorial__item-img" style="background-image: url(../img/content/tutorial-2.jpg);"></div>
+          <div class="tutorial__item-text">WordPress Tutorials</div>
+        </a>
+        </div>
+        <div class="tutorial__item">
+          <a href="#">
+          <div class="tutorial__item-img" style="background-image: url(../img/content/tutorial-3.jpg);"></div>
+          <div class="tutorial__item-text">HTML & CSS Tutorials</div>
+        </a>
+        </div>
+      </div>
+    </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
