--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+  <div class='wrapper'>
+    <div class="content">
     <header class="header">
       <div class="header__top">
         <div class="container">
@@ -36,7 +38,6 @@
           </div>
         </div>
       </div>
-
       <div class="header__menu">
         <div class="container">
           <nav class="menu">
@@ -103,7 +104,6 @@
             </button>
             <button type="button" data-filter=".category-psd">PSD</button>
           </div>
-
           <div class="products__inner-box">
             <div
               class="product__item mix category-plugins category-new"
@@ -139,6 +139,39 @@
                 </div>
               </div>
             </div>
+            <div
+            class="product__item mix category-plugins category-new"
+            data-order="1"
+          >
+            <a
+              class="product__item-img"
+              href="#"
+              style="background-image: url(img/content/product-11.jpg);"
+            ></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">Responsive Mobile APP</a>
+              
+                <a class="product__item-category" href="#">Site Template</a>
+              </div>
+              <div class="product__item-price">
+                $65
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div
+                  class="avatar"
+                  style="background-image: url(img/content/author-5.jpg);"
+                ></div>
+                <span>Freadwe</span>
+              </a>
+              <div class="product__item-star">
+                <div class="rate-star"></div>
+                <span>(05)</span>
+              </div>
+            </div>
+          </div> 
             <div
               class="product__item mix category-wordpress category-new"
               data-order="2"
@@ -303,7 +336,7 @@
               </div>
             </div>
             <div
-              class="product__item mix category-component category-new"
+              class="product__item mix category-component category-popular"
               data-order="2"
             >
               <a
@@ -327,38 +360,6 @@
                     style="background-image: url(img/content/author-7.jpg);"
                   ></div>
                   <span>Mikc Art</span>
-                </a>
-                <div class="product__item-star">
-                  <div class="rate-star"></div>
-                  <span>(05)</span>
-                </div>
-              </div>
-            </div>
-            <div
-              class="product__item mix category-psd category-new"
-              data-order="3"
-            >
-              <a
-                class="product__item-img"
-                href="#"
-                style="background-image: url(img/content/product-8.jpg);"
-              ></a>
-              <div class="product__item-content">
-                <div class="product__item-name">
-                  <a class="product__item-title" href="#">Designer Mockup</a>
-                  <a class="product__item-category" href="#">PsdTemplate</a>
-                </div>
-                <div class="product__item-price">
-                  $10
-                </div>
-              </div>
-              <div class="product__item-info">
-                <a class="product__item-author" href="#">
-                  <div
-                    class="avatar"
-                    style="background-image: url(img/content/author-8.jpg);"
-                  ></div>
-                  <span>ThemeLol</span>
                 </a>
                 <div class="product__item-star">
                   <div class="rate-star"></div>
@@ -506,7 +507,7 @@
               </div>
             </div>
           </div>
-          <div class="product__item">
+           <div class="product__item">
             <a
               class="product__item-img"
               href="#"
@@ -863,7 +864,7 @@
                 <span>(05)</span>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -961,6 +962,7 @@
       </div>
     </div>
     </section>
+  </div>
    <footer class="footer">
      <div class="footer__content">
        <div class="container">
@@ -1022,8 +1024,11 @@
        </div>
      </div>
    </footer>
+  </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
+
+
