added new-items and new-items list page, fixed old bugs

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -159,7 +159,7 @@
                     <a
                       class="product__item-img"
                       href="#"
-                      style="background-image: url(img/content/product-5.jpg);"
+                      style="background-image: url(img/content/product-3.jpg);"
                     ></a>
                     <div class="product__item-content">
                       <div class="product__item-name">
@@ -179,7 +179,7 @@
                         <div
                           class="avatar"
                           style="
-                            background-image: url(img/content/author-1.jpg);
+                            background-image: url(img/content/author-4.jpg);
                           "
                         ></div>
                         <span>Rayidnraf</span>
@@ -288,11 +288,13 @@
                       >Responsive Mobile APP</a
                     >
                     <a class="product__item-category" href="#">Site Template</a>
+                    <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                   </div>
                   <div class="product__item-price">
                     $15
+                    <span>Sales(14)</span>
                   </div>
-                </div>
+                  </div>
                 <div class="product__item-info">
                   <a class="product__item-author" href="#">
                     <div
@@ -303,7 +305,11 @@
                   </a>
                   <div class="product__item-star">
                     <div class="rate-star"></div>
-                    <span>(05)</span>
+                    <span>(05)</span>                    
+                  </div>
+                  <div class="product__item-list">
+                    <a class="icon-comment-o" href="#">(<span>15</span>)</a>
+                    <span class="icon-heart-o">(<span>20</span>)</span>
                   </div>
                 </div>
               </div>
@@ -319,9 +325,11 @@
                       >Responsive Mobile APP</a
                     >
                     <a class="product__item-category" href="#">Site Template</a>
+                    <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                   </div>
                   <div class="product__item-price">
                     $58
+                    <span>Sales(54)</span>
                   </div>
                 </div>
                 <div class="product__item-info">
@@ -335,6 +343,10 @@
                   <div class="product__item-star">
                     <div class="rate-star"></div>
                     <span>(05)</span>
+                  </div>
+                  <div class="product__item-list">
+                    <a class="icon-comment-o" href="#">(<span>18</span>)</a>
+                    <span class="icon-heart-o">(<span>35</span>)</span>
                   </div>
                 </div>
               </div>
@@ -350,9 +362,11 @@
                       >Responsive Mobile APP</a
                     >
                     <a class="product__item-category" href="#">Site Template</a>
+                    <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                   </div>
                   <div class="product__item-price">
                     $35
+                    <span>Sales(32)</span>
                   </div>
                 </div>
                 <div class="product__item-info">
@@ -366,6 +380,10 @@
                   <div class="product__item-star">
                     <div class="rate-star"></div>
                     <span>(05)</span>
+                  </div>
+                  <div class="product__item-list">
+                    <a class="icon-comment-o" href="#">(<span>17</span>)</a>
+                    <span class="icon-heart-o">(<span>26</span>)</span>
                   </div>
                 </div>
               </div>
@@ -383,9 +401,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $10
+                      <span>Sales(45)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -399,6 +419,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>7</span>)</a>
+                      <span class="icon-heart-o">(<span>6</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -416,9 +440,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $60
+                      <span>Sales(10)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -432,6 +458,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>14</span>)</a>
+                      <span class="icon-heart-o">(<span>17</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -449,9 +479,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $7.99
+                      <span>Sales(6)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -465,6 +497,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>17</span>)</a>
+                      <span class="icon-heart-o">(<span>42</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -482,9 +518,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $30
+                      <span>Sales(86)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -498,6 +536,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>26</span>)</a>
+                      <span class="icon-heart-o">(<span>51</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -515,9 +557,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $25
+                      <span>Sales(57)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -531,6 +575,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>21</span>)</a>
+                      <span class="icon-heart-o">(<span>11</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -548,9 +596,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $12
+                      <span>Sales(72)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -564,6 +614,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>79</span>)</a>
+                      <span class="icon-heart-o">(<span>27</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -581,9 +635,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $33
+                      <span>Sales(28)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -597,6 +653,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>11</span>)</a>
+                      <span class="icon-heart-o">(<span>16</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -614,9 +674,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $45
+                      <span>Sales(32)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -630,6 +692,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>27</span>)</a>
+                      <span class="icon-heart-o">(<span>17</span>)</span>
                     </div>
                   </div>
                 </div>
@@ -647,9 +713,11 @@
                       <a class="product__item-category" href="#"
                         >Site Template</a
                       >
+                      <div class="product__item-text">Pimply dummy text of the printing and typesetting industry.</div>
                     </div>
                     <div class="product__item-price">
                       $65
+                      <span>Sales(35)</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -663,6 +731,10 @@
                     <div class="product__item-star">
                       <div class="rate-star"></div>
                       <span>(05)</span>
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>19</span>)</a>
+                      <span class="icon-heart-o">(<span>15</span>)</span>
                     </div>
                   </div>
                 </div>
